--- a/code/prepare-synthetic-data.ipynb
+++ b/code/prepare-synthetic-data.ipynb
@@ -214,7 +214,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x7effea796550>"
+       "<matplotlib.colorbar.Colorbar at 0x7f3133056070>"
       ]
      },
      "execution_count": 4,
@@ -459,7 +459,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x7effea6893a0>"
+       "<matplotlib.colorbar.Colorbar at 0x7f3132f40af0>"
       ]
      },
      "execution_count": 6,
@@ -2558,20 +2558,31 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/home/leo/edu/gravity-processing/data/cape-town-surveys.zip'"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "shutil.make_archive(base_name=str(output_folder), format=\"zip\", base_dir=output_folder.parts[-1], root_dir=output_folder.parent)"
+    "#shutil.make_archive(base_name=str(output_folder), format=\"zip\", base_dir=output_folder.parts[-1], root_dir=output_folder.parent)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save the absolute data as well\n",
+    "\n",
+    "We'll use this for the second practical where we calculate disturbances. It will also serve as a reference for students to check that they did things correctly."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "survey.to_csv(\n",
+    "    Path(\"..\") / \"data\" / \"cape-town-survey-absolute.csv\", \n",
+    "    index=False,\n",
+    "    columns=\"longitude latitude easting northing elevation gravity\".split(),\n",
+    ")"
    ]
   }
  ],
